# parPE

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .readthedocs.yml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  LICENSE  README.md  build.sh  buildAll.sh  buildICB.sh  buildShippable.sh  buildSuperMUC.sh  codacy.yml  conf.py  install.sh  localoptimization.c  localoptimization.h  logger.c  logger.h  main.c  masterqueue.c  masterqueue.h  masterthread.c  misc.c  misc.h  mpiworker.c  mpiworker.h  pytest.ini  shippable.yml  sonar-project.properties  unittests_common.supp
amici/: CMakeLists.txt
amici/examples/: CMakeLists.txt
amici/src/: CMakeLists.txt  MultiConditionDataProvider.cpp  MultiConditionDataProvider.h  MultiConditionSteadyStateProblem.cpp  MultiConditionSteadyStateProblem.h  SimulationRunner.cpp  SimulationRunner.h  amiciMisc.cpp  amiciMisc.h  amiciSimulationRunner.cpp  amiciSimulationRunner.h  amiciSimulationRunnerTest.cpp  amiciUserDataSerialization.cpp  amiciUserDataSerialization.h  amiciUserDataSerializationTest.cpp  hierachicalOptimization.cpp  hierachicalOptimization.h  hierarchicalOptimization.cpp  hierarchicalOptimization.h  hierarchicalOptimizationTest.cpp  multiConditionDataProvider.cpp  multiConditionDataProvider.h  multiConditionDataProviderTest.cpp  multiConditionProblem.cpp  multiConditionProblem.h  multiConditionProblemResultWriter.cpp  multiConditionProblemResultWriter.h  multiConditionProblemResultWriterTest.cpp  multiConditionProblemTest.cpp  optimizationApplication.cpp  optimizationApplication.h  parameterMapper.cpp  parameterMapper.h  serializationtest.cpp  simulationResultWriter.cpp  simulationResultWriter.h  simulationResultWriterTest.cpp  simulationRunner.cpp  simulationRunner.h  simulationRunnerTest.cpp  (+7 more)
amici/tests/: CMakeLists.txt  hierarchicalOptimizationTest.py  main.cpp  testhierarchical.h5
common/src/: CMakeLists.txt  STLCompatibleMemoryLeakDetectorMacros.h  costFunction.cpp  costFunction.h  functions.cpp  functions.h  hdf5Misc.c  hdf5Misc.cpp  hdf5Misc.h  logging.c  logging.cpp  logging.h  misc.c  misc.cpp  misc.h  model.cpp  model.h  parpeConfig.h.in  parpeException.cpp  parpeException.h  parpeVersion.h.in  testingMisc.c  testingMisc.cpp  testingMisc.h
common/tests/: CMakeLists.txt  commonTests.cpp  hdf5MiscTests.cpp  main.cpp
examples/parpeamici/: CMakeLists.txt
examples/parpeloadbalancer/: CMakeLists.txt  main.cpp
gradientchecker/: CMakeLists.txt  main.c
loadbalancer/src/: CMakeLists.txt  LoadBalancerMaster.cpp  LoadBalancerMaster.h  LoadBalancerWorker.cpp  LoadBalancerWorker.h  loadBalancerMaster.cpp  loadBalancerMaster.h  loadBalancerMasterTest.c  loadBalancerMasterTest.cpp  loadBalancerWorker.c  loadBalancerWorker.cpp  loadBalancerWorker.h  queue.c
loadbalancer/tests/: CMakeLists.txt  main_c.cpp
objectiveFunctionBenchmarkModel/: CMakeLists.txt  dataprovider.c  dataprovider.h  main.c  masterthread.c  masterthread.h  objectiveFunction.c  objectiveFunction.h  problem.c  problem.h  resultwriter.c  resultwriter.h  simulationWorker.c  simulationWorkerTest.c
optimization/: CMakeLists.txt
optimization/src/: CMakeLists.txt  localOptimizationCeres.cpp  localOptimizationCeres.h  localOptimizationCeresTest.cpp  localOptimizationDlib.cpp  localOptimizationDlib.h  localOptimizationFsqp.cpp  localOptimizationFsqp.h  localOptimizationFsqpTest.cpp  localOptimizationIpopt.cpp  localOptimizationIpopt.h  localOptimizationIpoptTNLP.cpp  localOptimizationIpoptTNLP.h  localOptimizationIpoptTest.cpp  localOptimizationToms611.cpp  localOptimizationToms611.h  localOptimizationToms611Test.cpp  minibatchOptimization.cpp  minibatchOptimization.h  minibatchOptimizationTest.cpp  multiStartOptimization.cpp  multiStartOptimization.h  multiStartOptimizationTest.cpp  optimizationApplication.cpp  optimizationApplication.h  optimizationOptions.cpp  optimizationOptions.h  optimizationOptionsTest.cpp  optimizationProblem.cpp  optimizationProblem.h  optimizationProblemTest.cpp  optimizationResultWriter.cpp  optimizationResultWriter.h  optimizationResultWriterTest.cpp  optimizer.cpp  optimizer.h  optimizerMinibatch.cpp
optimization/tests/: CMakeLists.txt  main.cpp  quadraticTestProblem.cpp  quadraticTestProblem.h
python/: pyproject.toml  setup.py
python/parpe/: __init__.py  dataprovider.py  hdf5.py  hdf5_pe_input.py  hierarchical_optimization.py  loadleveler.py  misc.py  petab.py  plotting.py  result_extractor.py
python/swig/: CMakeLists.txt  parpe.i  std_unique_ptr.i
python/tests/: test_hierarchical_optimization.py  test_petab.py  test_plotting.py
src/: CMakeLists.txt  dataprovider.c  dataprovider.h  hdf5Misc.c  hdf5Misc.h  loadBalancerMaster.c  loadBalancerMaster.h  loadBalancerMasterTest.c  loadBalancerWorker.c  loadBalancerWorker.h  loadBalancerWorkerTest.c  localOptimizationCeres.cpp  localOptimizationCeres.hpp  localOptimizationCeresTest.c  localOptimizationCeresTest.cpp  localOptimizationIpopt.c  localOptimizationIpopt.cpp  localOptimizationIpopt.h  localOptimizationIpoptTest.c  localOptimizationIpoptTest.cpp  localoptimization.c  localoptimization.h  localoptimizationipopt.c  logging.c  logging.h  masterqueue.c  masterqueue.h  masterthread.c  masterthread.h  misc.c  misc.h  mpiworker.c  mpiworker.h  multiStartOptimization.c  multiStartOptimization.cpp  multiStartOptimization.h  multiStartOptimizationTest.cpp  objectiveFunction.c  objectiveFunction.h  objectiveFunctionTest.c  (+22 more)
src/parpeamici/: CMakeLists.txt  amiciMisc.cpp  amiciSimulationRunner.cpp  hierarchicalOptimization.cpp  hierarchicalOptimizationAnalyticalParameterProvider.cpp  multiConditionDataProvider.cpp  multiConditionProblem.cpp  optimizationApplication.cpp  simulationResultWriter.cpp  standaloneSimulator.cpp  steadystateSimulator.cpp
src/parpecommon/: CMakeLists.txt  costFunction.cpp  functions.cpp  hdf5Misc.cpp  logging.cpp  (+5 more)
swig/: CMakeLists.txt  std_unique_ptr.i
tests/: CMakeLists.txt  CMakeLists.txt.in  main.cpp  misc.c  parpe.supp  testmasterqueue.c  testmpiworker.c  testobjectivefunction.c  testqueuemaster.c  testqueueworker.c
(+497 files in other folders)
