[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "parpe"
dynamic = ["version"]
authors = [
    {name = "Daniel Weindl", email = "sci@danielweindl.de"},
]
description = "parpe python package"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    'numpy>=1.18.1',
    'termcolor>=1.1.0',
    'colorama>=0.4.3',
    'petab>=0.4.0',
    'amici>=0.26.1',
    'h5py>=3.0.0',
    'python-libsbml>=5.17.0',
    'snakemake>=5.10.0',
    'coloredlogs>=15.0',
    'scipy',
    'matplotlib',
]

[project.optional-dependencies]
test = ["pytest", "pre-commit"]

[project.scripts]
parpe_petab_to_hdf5 = "parpe.hdf5_pe_input:main"

[project.urls]
Documentation = "https://parpe.readthedocs.io/"
Repository = "https://github.com/ICB-DCM/parPE/"

[tool.setuptools_scm]
root = ".."

[tool.black]
line-length = 79

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"

